# linearRegression

./: .gitignore  CMakeLists.txt  _setup_path.py  linear_regression_model.txt  setup_project.py
cpp-core/: CMakeLists.txt
ml_algorithms/: CMakeLists.ChatGPT  CMakeLists.DeepSeek  CMakeLists.txt  CMakeLists.txt.old
ml_algorithms/include/: algorithms.h  linear_regression_multi_var.h  linear_regression_one_var.h  logistic_regression.h
ml_algorithms/src/: algorithms.cpp  linear_regression_multi_var.cpp  linear_regression_one_var.cpp  logistic_regression.cpp
ml_algorithms/tests/: test_linear.cpp
pyBindAlgorithms/: CMakeLists.txt
pyBindAlgorithms/src/: bindAlgorithms.cpp
python-bindings/: CMakeLists.txt
python-bindings/scripts/: housePriceCostFunction.py
python-bindings/src_cpp/: bindAlgorithms.cpp
scripts/: costFunction.py  housePriceGradientDescent  housePricePrediction.py  linearRegression.py
tests/: test_linear_regression.py
utils/helpers/: __init__.py  config.py
utils/models/: __init__.py
